[package]
name = "httpwsrep"
version = "0.1.1"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "http status codes for galera cluster wsrep"
documentation = "https://github.com/nbari/httpwsrep/blob/master/README.md"
homepage = "https://github.com/nbari/httpwsrep"
repository = "https://github.com/nbari/httpwsrep"
readme = "README.md"
keywords = ["galera", "cluster", "mysql", "http", "wsrep"]
categories = ["database", "network-programming"]
license = "BSD-3-Clause"
edition = "2018"

[badges]
travis-ci = { repository = "nbari/httpwsrep", branch = "master" }

[dependencies]
clap = "2.33.0"
mysql = "17.0.0"
hyper = "0.12.35"
