[package]
name = "httpwsrep"
version = "0.3.0"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "http status codes for galera cluster"
documentation = "https://github.com/nbari/httpwsrep/blob/master/README.md"
homepage = "https://github.com/nbari/httpwsrep"
repository = "https://github.com/nbari/httpwsrep"
readme = "README.md"
keywords = ["galera", "cluster", "mysql", "http", "wsrep"]
categories = ["database", "network-programming"]
license = "BSD-3-Clause"
edition = "2018"

[badges]
travis-ci = { repository = "nbari/httpwsrep", branch = "master" }

[dependencies]
chrono = "0.4.11"
clap = "2.33"
dsn = "1"
mysql_async = "0.23"
serde = { version ="1.0", features = ["derive"]}
tokio = { version ="0.2", features = ["full"]}
warp = "0.2"
