[package]
name = "httpwsrep"
version = "0.4.2"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "HTTP status codes for Galera cluster"
documentation = "https://github.com/nbari/httpwsrep/blob/master/README.md"
homepage = "https://github.com/nbari/httpwsrep"
repository = "https://github.com/nbari/httpwsrep"
readme = "README.md"
keywords = ["galera", "cluster", "mysql", "http", "wsrep"]
categories = ["database", "network-programming"]
license = "BSD-3-Clause"
edition = "2018"

[badges]
travis-ci = { repository = "nbari/httpwsrep", branch = "master" }

[dependencies]
anyhow = "1"
chrono = "0.4.19"
clap = "2.33"
dsn = "1"
mysql_async = "0.26"
serde = { version ="1.0", features = ["derive"]}
tokio = { version ="1", features = ["full"]}
warp = "0.3"

[package.metadata.rpm]
package = "httpwsrep"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
httpwsrep = { path = "/usr/bin/./src/bin/httpwsrep" }
